--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -15,8 +15,7 @@ h1>a {
   display: flex;
   align-items: center;
   padding: 12px 0px;
-  gap: 64px;
-
+  
   a {
     display: block;
   }
